--- a/Avtoteker_FRONTEND/html/tires.html
+++ b/Avtoteker_FRONTEND/html/tires.html
@@ -15,8 +15,8 @@
         <div class="container-fluid" id="Head">
             <div class="row">
                 <div class="col-md-3 offset-md-0" id="header_contact">
-                    <a href="#" target="blanc"><i class="fab fa-facebook"></i></a>
-                    <a href="#" target="blanc"><i class="fab fa-instagram" ></i></a>
+                    <a href="https://www.facebook.com/avtoteker.az/" target="blanc"><i class="fab fa-facebook"></i></a>
+                    <a href="https://www.instagram.com/avtoteker.az_/" target="blanc"><i class="fab fa-instagram" ></i></a>
                     <a href="tel:+994509699933"><i class="fas fa-phone-alt"></i></a>
                     <span >(051) 901 49 99</span>
                     <a href="https://wa.me/+994509699933" target="blanc"><i class="fab fa-whatsapp"></i></a>
