--- a/Avtoteker_FRONTEND/html/tires.html
+++ b/Avtoteker_FRONTEND/html/tires.html
@@ -145,7 +145,7 @@
                 <div class="col-md-1 offset-md-0 Drp">
                     <div class="btn-group">
                         <button type="button" class="btn btn-light dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Right-aligned menu
+                            Width
                         </button>
                         <div class="dropdown-menu dropdown-menu-right">
                             <input type="text">
@@ -160,7 +160,7 @@
                 <div class="col-md-1 offset-md-2 Drp">
                     <div class="btn-group">
                         <button type="button" class="btn btn-light dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Right-aligned menu
+                            Aspect-ratio
                         </button>
                         <div class="dropdown-menu dropdown-menu-right">
                                 <input type="text">
@@ -174,7 +174,7 @@
                 <div class="col-md-1 offset-md-2 Drp">
                     <div class="btn-group">
                         <button type="button" class="btn btn-light dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Right-aligned menu
+                            Diameter
                         </button>
                         <div class="dropdown-menu dropdown-menu-right">
                                 <input type="text">
@@ -188,7 +188,7 @@
                 <div class="col-md-1 offset-md-2 Drp">
                     <div class="btn-group">
                         <button type="button" class="btn btn-light dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Right-aligned menu
+                            Brand
                         </button>
                         <div class="dropdown-menu dropdown-menu-right">
                             <input type="text">
