--- a/Avtoteker_FRONTEND/html/tires.html
+++ b/Avtoteker_FRONTEND/html/tires.html
@@ -119,7 +119,7 @@
         </div>
 
         <div class="container-fluid mt-2 " id="result">
-            <div class="row pl-4">
+            <div class="row pl-4 pt-2">
                 <div class="col-md-3">
                     <img src="../assets/logos/section-width.png" alt="">
                     <span>Width</span>
