--- a/Avtoteker_FRONTEND/html/tires.html
+++ b/Avtoteker_FRONTEND/html/tires.html
@@ -210,7 +210,21 @@
     </div>
 
     <div id="footer" class="container-fluid mt-5">
-        <h1>Hello</h1>
+
+        <div class="row">
+            <div class="col-md-3 offset-md-1" id="logo1">
+                <a href="tires.html"><img src="../assets/logos/Logo.png" alt=""></a>
+            </div>
+        </div>
+        <hr>
+        <div class="row" id="copy">
+            <div class="col-md-12 text-center" id="copyright">
+                    © 2019 
+                    <a href="tires.html">Avtoteker<sup>®</sup></a>
+                    <span>Designed By Inndoor Team</span>
+                    All rights reserved
+            </div>
+        </div>
 
 
     </div>
