--- a/Avtoteker_FRONTEND/html/tires.html
+++ b/Avtoteker_FRONTEND/html/tires.html
@@ -31,7 +31,7 @@
 
         <div class="container-fluid" id="head">
             <div class="row">
-                <div class="col-md-3 offset-md-1" id="logo">
+                <div class="col-md-3 offset-md-1 logo">
                     <a href="tires.html"><img src="../assets/logos/Logo.png" alt="LOGO"></a>
                 </div>
 
@@ -212,7 +212,7 @@
     <div id="footer" class="container-fluid mt-5">
 
         <div class="row">
-            <div class="col-md-3 offset-md-1" id="logo1">
+            <div class="col-md-3 offset-md-1 logo1">
                 <a href="tires.html"><img src="../assets/logos/Logo.png" alt=""></a>
             </div>
         </div>
