--- a/Avtoteker_FRONTEND/html/tires.html
+++ b/Avtoteker_FRONTEND/html/tires.html
@@ -221,7 +221,7 @@
             <div class="col-md-12 text-center" id="copyright">
                     © 2019 
                     <a href="tires.html">Avtoteker<sup>®</sup></a>
-                    <span>Designed By Inndoor Team</span>
+                    <span>Designed By Indoor Team</span>
                     All rights reserved
             </div>
         </div>
