--- a/Avtoteker_FRONTEND/html/tires.html
+++ b/Avtoteker_FRONTEND/html/tires.html
@@ -142,7 +142,7 @@
             
 
             <div class="row pb-1 pl-4">
-                <div class="col-md-1 offset-md-0">
+                <div class="col-md-1 offset-md-0 Drp">
                     <div class="btn-group">
                         <button type="button" class="btn btn-light dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Width
@@ -157,7 +157,7 @@
                     </div>
                 </div>
 
-                <div class="col-md-1 offset-md-2">
+                <div class="col-md-1 offset-md-2 Drp">
                     <div class="btn-group">
                         <button type="button" class="btn btn-light dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Aspect-ratio
@@ -171,7 +171,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-1 offset-md-2">
+                <div class="col-md-1 offset-md-2 Drp">
                     <div class="btn-group">
                         <button type="button" class="btn btn-light dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Diameter
@@ -185,7 +185,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-1 offset-md-2">
+                <div class="col-md-1 offset-md-2 Drp">
                     <div class="btn-group">
                         <button type="button" class="btn btn-light dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Brand
