--- a/Avtoteker_FRONTEND/html/tires.html
+++ b/Avtoteker_FRONTEND/html/tires.html
@@ -214,7 +214,18 @@
         <div class="row">
             <div class="col-md-3 offset-md-1">
                 <a href="tires.html"><img src="../assets/logos/Logo.png" alt=""></a>
+                <hr>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur quisquam animi deserunt ducimus possimus eos temporibus pariatur quae at. Doloribus sint consequuntur reprehenderit? Necessitatibus ipsa, quisquam beatae totam quam quis.</p>
+
+                <div>
+                    <img src="../assets/logos/Visa.png" alt="">
+                    <img src="../assets/logos/MasterCard.png" alt="">
+                    <img src="../assets/logos/maestro.png" alt="">
+                    <img src="../assets/logos" alt="">
+                </div>
             </div>
+
+            
         </div>
         <hr>
         <div class="row" id="copy">
