--- a/Avtoteker_FRONTEND/html/tires.html
+++ b/Avtoteker_FRONTEND/html/tires.html
@@ -214,15 +214,35 @@
         <div class="row">
             <div class="col-md-3 offset-md-1">
                 <a href="tires.html"><img src="../assets/logos/Logo.png" alt=""></a>
-                <hr>
+                <hr class="yellow_hr">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur quisquam animi deserunt ducimus possimus eos temporibus pariatur quae at. Doloribus sint consequuntur reprehenderit? Necessitatibus ipsa, quisquam beatae totam quam quis.</p>
 
                 <div>
+                    <a href="https://www.facebook.com/avtoteker.az/" target="blanc"><i class="fab fa-facebook"></i></a>
+                    <a href="https://www.instagram.com/avtoteker.az_/" target="blanc"><i class="fab fa-instagram" ></i></a>
+                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                    <a href="https://wa.me/+994509699933" target="blanc"><i class="fab fa-whatsapp"></i></a>
+                </div>
+
+                <div class="mt-2">
                     <img src="../assets/logos/Visa.png" alt="">
                     <img src="../assets/logos/MasterCard.png" alt="">
                     <img src="../assets/logos/maestro.png" alt="">
                     <img src="../assets/logos" alt="">
                 </div>
+            </div>
+
+            <div class="col-md-2 offset-md-1 mt-4">
+                <h3>More:</h3>
+                <hr class="yellow_hr">
+            </div>
+
+            <div class="col-md-2 offset-md-2 mt-4">
+                <h3>For Saving:</h3>
+                <hr class="yellow_hr">
+                <input type="email" placeholder="Email address">
+                <input type="text" placeholder="First name">
+                <button class="mt-2">Submit</button>
             </div>
 
             
