--- a/Avtoteker_FRONTEND/html/tires.html
+++ b/Avtoteker_FRONTEND/html/tires.html
@@ -238,11 +238,13 @@
             </div>
 
             <div class="col-md-2 offset-md-2 mt-4">
-                <h3>For Saving:</h3>
+                <h3>Subscribe & Get Offs:</h3>
                 <hr class="yellow_hr">
-                <input type="email" placeholder="Email address">
-                <input type="text" placeholder="First name">
-                <button class="mt-2">Submit</button>
+                <input type="text" placeholder="Your name">
+                <input type="email" placeholder="Your email">
+                <input type="checkbox">
+                <span>I agree to get promotional contents</span>
+                <button class="mt-2">I am in</button>
             </div>
 
             
