--- a/Avtoteker_FRONTEND/html/tires.html
+++ b/Avtoteker_FRONTEND/html/tires.html
@@ -222,6 +222,7 @@
                     <a href="https://www.instagram.com/avtoteker.az_/" target="blanc"><i class="fab fa-instagram" ></i></a>
                     <a href="#"><i class="fab fa-linkedin-in"></i></a>
                     <a href="https://wa.me/+994509699933" target="blanc"><i class="fab fa-whatsapp"></i></a>
+                    <a href="#"><i class="fab fa-telegram"></i></a>
                 </div>
 
                 <div class="mt-2">
