--- a/Avtoteker_FRONTEND/html/tires.html
+++ b/Avtoteker_FRONTEND/html/tires.html
@@ -232,6 +232,7 @@
                     <img src="../assets/logos/MasterCard.png" alt="">
                     <img src="../assets/logos/maestro.png" alt="">
                     <img src="../assets/logos" alt="">
+                    <img src="../assets/logos/birkart.jpeg" alt="">
                 </div>
             </div>
 
