--- a/Avtoteker_FRONTEND/html/tires.html
+++ b/Avtoteker_FRONTEND/html/tires.html
@@ -238,6 +238,24 @@
             <div class="col-md-2 offset-md-1 mt-4">
                 <h3>More:</h3>
                 <hr class="yellow_hr">
+
+                <div id="more">
+                    <ul>
+                        <li><a href="#">Our company</a></li>
+                        <li><a href="#">Our contacts</a></li>
+                        <li><a href="#">Our tire service</a></li>
+                        <li><a href="#">Wholesale</a></li>
+                        <li><a href="#">Distributorship & Dealership</a></li>
+                        <li><a href="#">Brands</a></li>
+                    </ul>
+
+                    <ul>
+                        <li><a href="#">Tire financing</a></li>
+                        <li><a href="#">Free delivery</a></li>
+                        <li><a href="#">Warranty</a></li>
+                        <li><a href="#">Media</a></li>
+                    </ul>
+                </div>
             </div>
 
             <div class="col-md-2 offset-md-2 mt-4">
