--- a/Avtoteker_FRONTEND/html/tires.html
+++ b/Avtoteker_FRONTEND/html/tires.html
@@ -207,6 +207,21 @@
                 <div class="col-md-4 text-right mt-4"><a href="#number"><i class="far fa-question-circle"></i>How to find your tire size</a></div>
             </div>
         </div>
+        <div class="container-fluid mt-1" id="main_cor">
+            <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="../assets/images/A-class.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                    <img src="../assets/images/mersedes.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                    <img src="../assets/images/mersedes3.jpg" class="d-block w-100" alt="...">
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
     <div id="footer" class="container-fluid mt-5">
