--- a/Avtoteker_FRONTEND/html/tires.html
+++ b/Avtoteker_FRONTEND/html/tires.html
@@ -291,7 +291,7 @@
                     
                     © 2019 
                     <a href="tires.html">Avtoteker<sup>®</sup></a>
-                    <span>Designed By Indoor Team</span>
+                    <span>Designed By Indoor Team</span>.
                     All rights reserved
             </div>
         </div>
