--- a/Avtoteker_FRONTEND/html/tires.html
+++ b/Avtoteker_FRONTEND/html/tires.html
@@ -267,7 +267,8 @@
                         <li><a href="#">Our tire service</a></li>
                         <li><a href="#">Wholesale</a></li>
                         <li><a href="#">Distributorship & Dealership</a></li>
-                        <li><a href="#">Brands</a></li>
+                        <li><a href="#">Our Team</a></li>
+                        
                     </ul>
 
                     <ul>
@@ -275,6 +276,7 @@
                         <li><a href="#">Free delivery</a></li>
                         <li><a href="#">Warranty</a></li>
                         <li><a href="#">Media</a></li>
+                        <li><a href="#">Brands</a></li>
                     </ul>
                 </div>
             </div>
@@ -297,7 +299,7 @@
                     
                     © 2019 
                     <a href="tires.html">Avtoteker<sup>®</sup></a>
-                    <span>Designed By Indoor Team</span>.
+                    <span>Created by indoor team</span>.
                     All rights reserved
             </div>
         </div>
