--- a/Avtoteker_FRONTEND/html/tires.html
+++ b/Avtoteker_FRONTEND/html/tires.html
@@ -213,17 +213,23 @@
         <div class="container-fluid mt-2" id="Other">
             <h1>Coming Soon</h1>
         </div>
+
+
         <div class="container-fluid mt-1" id="main_cor">
-            <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="../assets/images/A-class.jpg" class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                    <img src="../assets/images/mersedes.jpg" class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                    <img src="../assets/images/mersedes3.jpg" class="d-block w-100" alt="...">
+            <div class="row">
+                <div class="col-md-6">
+                    <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img src="../assets/images/service-1.png" class="d-block w-100" alt="...">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="../assets/images/service-2.png" class="d-block w-100" alt="...">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="../assets/images/service-3.png" class="d-block w-100" alt="...">
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
