--- a/Avtoteker_FRONTEND/html/tires.html
+++ b/Avtoteker_FRONTEND/html/tires.html
@@ -35,7 +35,7 @@
                     <a href="tires.html"><img src="../assets/logos/Logo.png" alt="LOGO"></a>
                 </div>
 
-                <div class="col-md-7 offset-md-1" id="NavBar">
+                <div class="col-md-7 offset-md-1 pb-4" id="NavBar">
                     <ul>
                         <li><a href="#searchTire">Tire Search</a></li>
                         <li><a href="">Service</a></li>
