--- a/Avtoteker_FRONTEND/html/tires.html
+++ b/Avtoteker_FRONTEND/html/tires.html
@@ -30,19 +30,19 @@
         </div>
 
         <div class="container-fluid" id="head">
-            <div class="row">
-                <div class="col-md-3 offset-md-1">
+            <div class="row p-0">
+                <div class="col-md-3 offset-md-1 p-1" >
                     <a href="tires.html"><img src="../assets/logos/Logo.png" alt="LOGO"></a>
                 </div>
 
-                <div class="col-md-7 offset-md-1 pb-4" id="NavBar">
-                    <ul>
-                        <li><a href="#searchTire">Tire Search</a></li>
-                        <li><a href="">Service</a></li>
-                        <li><a href="">Financing</a></li>
-                        <li><a href="">Campaigns</a></li>
-                        <li><a href="">Outlet</a></li>
-                    </ul>
+                <div class="col-md-7 offset-md-1" id="NavBar">                    
+                    <div class="row">
+                        <a  href="#searchTire">Tire Search</a></li>
+                        <a  href="">Service</a></li>
+                        <a  href="">Financing</a></li>
+                        <a  href="">Campaigns</a></li>
+                        <a  href="">Outlet</a></li>  
+                    </div>
                 </div>
             </div>
         </div>
