--- a/Avtoteker_FRONTEND/html/tires.html
+++ b/Avtoteker_FRONTEND/html/tires.html
@@ -134,8 +134,9 @@
                                     <button type="button" class="btn btn-light dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                         Width
                                     </button>
-                                    <div class="dropdown-menu dropdown-menu-right">
-                                        <input type="text">
+                                    <div class="dropdown-menu dropdown-menu-right search_prop">
+                                        <input type="text" class="w-100">
+                                        
                                         <hr>
                                         <button class="dropdown-item" type="button">Action</button>
                                         <button class="dropdown-item" type="button">Another action</button>
@@ -158,10 +159,10 @@
                             <div class="w-100">
                                 <div class="btn-group w-100">
                                     <button type="button" class="btn btn-light dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        Width
+                                        Aspect-ratio
                                     </button>
-                                    <div class="dropdown-menu dropdown-menu-right">
-                                        <input type="text">
+                                    <div class="dropdown-menu dropdown-menu-right search_prop">
+                                        <input type="text"  class="w-100">
                                         <hr>
                                         <button class="dropdown-item" type="button">Action</button>
                                         <button class="dropdown-item" type="button">Another action</button>
@@ -184,10 +185,10 @@
                             <div class="w-100">
                                 <div class="btn-group w-100">
                                     <button type="button" class="btn btn-light dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        Width
+                                        Diameter
                                     </button>
-                                    <div class="dropdown-menu dropdown-menu-right">
-                                        <input type="text">
+                                    <div class="dropdown-menu dropdown-menu-right search_prop">
+                                        <input type="text"  class="w-100">
                                         <hr>
                                         <button class="dropdown-item" type="button">Action</button>
                                         <button class="dropdown-item" type="button">Another action</button>
@@ -210,10 +211,10 @@
                             <div class="w-100">
                                 <div class="btn-group w-100 ">
                                     <button type="button" class="btn btn-light dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        Width
+                                        Brands
                                     </button>
-                                    <div class="dropdown-menu dropdown-menu-right">
-                                        <input type="text">
+                                    <div class="dropdown-menu dropdown-menu-right search_prop">
+                                        <input type="text" class="w-100 ">
                                         <hr>
                                         <button class="dropdown-item" type="button">Action</button>
                                         <button class="dropdown-item" type="button">Another action</button>
