--- a/Avtoteker_FRONTEND/html/tires.html
+++ b/Avtoteker_FRONTEND/html/tires.html
@@ -12,11 +12,11 @@
 <body>
 <!--------------------------------------------------------------------------------------------------->
     <div id="header">  
-        <div class="container-fluid" id="Head">
+        <div class="container-fluid " id="Head">
             
                 <div class="row p-3">
-                    <div class="col-md-5 p-2" id="header_contact">
-                        <div class="row">
+                    <div class="col-md-5" id="header_contact">
+                        <div class="row p-1">
                             <div class="col-md-12 w-100">
                                 
                                 <a href="https://www.facebook.com/avtoteker.az/" target="blanc"><i class="fab fa-facebook"></i></a>
@@ -35,8 +35,8 @@
                         </div>
                     </div>
 
-                    <div class="col-md-3 offset-md-4 p-0 mt-2" id="searchbar">
-                        <div class="row">
+                    <div class="col-md-3 offset-md-4" id="searchbar">
+                        <div class="row p-1">
                             <div class="col-md-12 text-right ">
                                 <input class="w-100" type="text" placeholder="Search">
                                 <!-- <a href="#" ><i class="fas fa-search"></i></a> -->
