--- a/Avtoteker_FRONTEND/html/tires.html
+++ b/Avtoteker_FRONTEND/html/tires.html
@@ -38,8 +38,10 @@
                     <div class="col-md-3 offset-md-4" id="searchbar">
                         <div class="row p-1">
                             <div class="col-md-12 text-right ">
-                                <input class="w-100" type="text" placeholder="Search">
+                                <form method="POST">
+                                    <input class="w-100" type="text" placeholder="Search" name="feyruzgot">
                                 <!-- <a href="#" ><i class="fas fa-search"></i></a> -->
+                                </form>
                             </div>
                         </div>
                     </div>
