--- a/Avtoteker_FRONTEND/html/tires.html
+++ b/Avtoteker_FRONTEND/html/tires.html
@@ -39,7 +39,7 @@
                         <div class="row p-1">
                             <div class="col-md-12 text-right ">
                                 <form method="POST">
-                                    <input class="w-100" type="text" placeholder="Search" name="feyruzgot">
+                                    <input class="w-100" type="text" placeholder="Search" name="object">
                                 <!-- <a href="#" ><i class="fas fa-search"></i></a> -->
                                 </form>
                             </div>
