--- a/Avtoteker_FRONTEND/html/tires.html
+++ b/Avtoteker_FRONTEND/html/tires.html
@@ -352,7 +352,7 @@
                 </div>
             </div>
 
-            <div class="col-lg-2 offset-lg-1 mt-4 more1">
+            <div class="col-lg-2 offset-lg-1  more1">
                 <form method="POST">
                     <h3>Subscribe & Get Offs:</h3>
                     <hr class="yellow_hr">
