--- a/Avtoteker_FRONTEND/html/tires.html
+++ b/Avtoteker_FRONTEND/html/tires.html
@@ -327,7 +327,7 @@
                 </div>
             </div>
 
-            <div class="col-lg-3 offset-lg-1 mt-4 more">
+            <div class="col-lg-3 offset-lg-1 mt-4 mr-2 more">
                 <h3>More:</h3>
                 <hr class="yellow_hr">
 
