--- a/Avtoteker_FRONTEND/html/tires.html
+++ b/Avtoteker_FRONTEND/html/tires.html
@@ -187,7 +187,7 @@
                         <div class="row">
                             <div class="col-md-12">
                                 <img src="../assets/logos/aspect-ratio.png" alt="">
-                                <label>Aspect-ratio</label>
+                                <label>Height</label>
                             </div>
                         </div>
                         <div class="row pt-1 pb-1">
@@ -195,7 +195,7 @@
                                 <div class="w-100">
                                     <div class="btn-group w-100">
                                         <button type="button" class="btn btn-light dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                            Aspect-ratio
+                                            Height
                                         </button>
                                         <div class="dropdown-menu dropdown-menu-right search_prop">
                                             <input type="text"  class="w-100" name="aspect-ratio">
@@ -304,7 +304,7 @@
     <div id="footer" class="container-fluid mt-5">
 
         <div class="row pt-3 infi">
-            <div class="col-lg-3 offset-lg-1 col-md-6 offset-md-0 col-sm-8 about">
+            <div class="col-lg-3 offset-lg-1 col-md-5  col-sm-8 about">
                 <a href="tires.html"><img src="../assets/logos/Logo.png" alt=""></a>
                 <hr class="yellow_hr">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur quisquam animi deserunt ducimus possimus eos temporibus pariatur quae at. Doloribus sint consequuntur reprehenderit? Necessitatibus ipsa, quisquam beatae totam quam quis.</p>
@@ -327,7 +327,7 @@
                 </div>
             </div>
 
-            <div class="col-lg-3 offset-lg-1 col-md-2 offset-md-0 mt-4 mr-2 ml-6 more">
+            <div class="col-lg-3 offset-lg-1  mt-4 mr-2 ml-6 more">
                 <h3>More:</h3>
                 <hr class="yellow_hr">
 
