--- a/Avtoteker_FRONTEND/html/tires.html
+++ b/Avtoteker_FRONTEND/html/tires.html
@@ -304,7 +304,7 @@
     <div id="footer" class="container-fluid mt-5">
 
         <div class="row pt-3 infi">
-            <div class="col-lg-3 offset-lg-1 col-md-5  col-sm-8 about">
+            <div class="col-lg-3  col-md-5 col-sm-8 about">
                 <a href="tires.html"><img src="../assets/logos/Logo.png" alt=""></a>
                 <hr class="yellow_hr">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur quisquam animi deserunt ducimus possimus eos temporibus pariatur quae at. Doloribus sint consequuntur reprehenderit? Necessitatibus ipsa, quisquam beatae totam quam quis.</p>
@@ -352,7 +352,7 @@
                 </div>
             </div>
 
-            <div class="col-lg-2 offset-lg-1  more1">
+            <div class="col-lg-3 offset-lg-1  more1">
                 <form method="POST">
                     <h3>Subscribe & Get Offs:</h3>
                     <hr class="yellow_hr">
